完善点播相关API